packages/resource-deployment/templates/vnet.template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "name": {
            "type": "string",
            "defaultValue": "[concat('vnet-a11y',toLower(uniqueString(resourceGroup().id)))]",
            "metadata": {
                "description": "The name of the Virtual Network"
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "The geo location for the Virtual Network"
            }
        },
        "addressPrefix": {
            "type": "string"
        },
        "subnetName": {
            "type": "string",
            "defaultValue": "default"
        },
        "subnetAddressPrefix": {
            "type": "string"
        },
        "enableDdosProtection": {
            "type": "bool",
            "defaultValue": false
        },
        "securityGroupName": {
            "type": "string",
            "defaultValue": "[concat('network-security-group-a11y',toLower(uniqueString(resourceGroup().id)))]",
            "metadata": {
                "description": "The name of the Virtual Network's security group"
            }
        }
    },
    "resources": [
        {
            "name": "[parameters('securityGroupName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2023-04-01",
            "location": "[parameters('location')]",
            "tags": {},
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowBatchPortsInbound",
                        "properties": {
                            "description": "Allow Azure Batch inbound traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "29876-29877",
                            "sourceAddressPrefix": "BatchNodeManagement",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowStoragePortOutbound",
                        "properties": {
                            "description": "Allow Azure Batch outbound traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Storage",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "resources": []
        },
        {
            "apiVersion": "2023-04-01",
            "name": "[parameters('name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": ["[parameters('addressPrefix')]"]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnetAddressPrefix')]",
                            "addressPrefixes": [],
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('securityGroupName'))]"
                            }
                        }
                    }
                ],
                "enableDdosProtection": "[parameters('enableDdosProtection')]"
            },
            "dependsOn": ["[resourceId('Microsoft.Network/networkSecurityGroups', parameters('securityGroupName'))]"]
        }
    ]
}
